se tiene el sidebar

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="example-card">
+<div (click)="mostrar()" class="example-card">
     <mat-card role="region">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
