--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,6 +8,10 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    // position: relative;
+    // left: 0;
+    // top: 2rem;
+    // top: 0;
 }
 
 ul li{
