--- a/src/app/shared/aside/aside.component.scss
+++ b/src/app/shared/aside/aside.component.scss
@@ -18,9 +18,9 @@ mat-drawer-content {
 
 
 .asidebarGrid{
-    width: 20%;
+    width: 30%;
     height: 100%;
-    background-color: rosybrown;
+    background-color: #191A19;
     position: fixed;
     left: 0;
     top: 5.2rem;
